--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
    <div class="imgDestra">
     <div class="imgSmall" >
 
-        <img v-bind:src="elenco.picture" class="picture-side" alt="{{elenco.titolo}}" v-for="elenco,i in elenco" :class="i === currentActivePicture ? 'active' : '' " > <!--img side piccola-->
+        <img v-bind:src="elenco.picture" class="picture-side" alt="{{elenco.titolo}}" v-for="elenco,i in elenco" :class="i === currentActivePicture ? 'active-side' : '' " > <!--img side piccola-->
     </div>
     
     <div class="arrow-top">
